# retrieval-augmented-graph-generation-webapp

./: .env  .gitignore  EDA.ipynb  README.md  conda-lock.yml  data  docker-compose-kibana.yml  docker-compose-noes.yml  docker-compose.yml  es-docker-compose.yml  eval.ipynb  init.sh  run_app.sh
data/: agg_runtime.py  get_stats.sh  merge.py  stats.txt  triplets.json
datos_a_evaluar/: entities.json  triplets.json  (+1 more)
graph/: CMakeLists.txt  Dockerfile  KnowledgeGraph  compile_commands.json  compile_flags.txt  graph.json  main.cpp  makefile
graph/.cache/clangd/index/: adjacency_list.cpp.7E113B8AA1EE49A1.idx  adjacency_list.hpp.92ABA8F530C37A70.idx  fruchterman_reingold.cpp.F8A8B9AB856CF1B8.idx  fruchterman_reingold.hpp.12CE32246186447B.idx  httplib.h.4412F27B58AD16FC.idx  json_defs.cpp.090B26189EAD87C1.idx  json_defs.hpp.E2F0499F2C5E28E9.idx  knowledge_graph.cpp.AE28981BDD5BAC48.idx  knowledge_graph.hpp.20AAA706B4D26F14.idx  layout.cpp.8C0814955CAE86A7.idx  layout.hpp.342A78DAA57E9140.idx  main.cpp.0DA6255ABD225836.idx
graph/data/documentos/: graph.json
graph/data/varios/: graph.json
graph/include/: adjacency_list.hpp  fruchterman_reingold.hpp  json_defs.hpp  knowledge_graph.hpp  layout.hpp
graph/src/: README.md  adjacency_list.cpp  fruchterman_reingold.cpp  json_defs.cpp  knowledge_graph.cpp  layout.cpp
graph/test/: CMakeLists.txt  Dockerfile  graph12.json  graph22.json  test_generate.sh  test_generate_empty.sh  test_get.sh  test_get_invalid.sh  test_get_subgraph.sh  test_python_request.sh
graph/test/expected/: test_get.json  test_get_subgraph.json
(+470 files in other folders)
